fix(PartView): don't wrap obj names and always show duration

--- a/apps/app/src/react/styles/layer.scss
+++ b/apps/app/src/react/styles/layer.scss
@@ -63,6 +63,8 @@
 
 			.body {
 				flex-grow: 1;
+				flex-shrink: 1;
+				min-width: 0;
 				display: flex;
 				justify-content: space-between;
 			}
@@ -71,6 +73,7 @@
 			.duration {
 				font-size: 1.4rem;
 				text-shadow: 0 0 4px #00000080;
+				white-space: nowrap;
 			}
 
 			.title {
